[package]
name = "lightningcss_bindings"
version = "0.3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "lightningcss_bindings"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.22.0", features = ["extension-module"] }
browserslist-rs = "0.15.0"
lightningcss = { version = "1.0.0-alpha.57", features = ["browserslist"] }
